--- a/signup.css
+++ b/signup.css
@@ -32,6 +32,7 @@ body {
 }
 
 .form .form-item input,
+.form .form-item select,
 .form .form-item textarea {
     padding: 8px 12px;
     width: 100%;
